@@ -127,7 +127,7 @@ def test():
 
 
 if __name__ == "__main__":
-    from . import demoutils
+    import demoutils
 
     if demoutils.NeedGoodGUI():
         test()
