@@ -238,7 +238,7 @@ def demo():
 
 
 if __name__ == "__main__":
-    from . import demoutils
+    import demoutils
 
     if demoutils.NeedGoodGUI():
         testall()
