@@ -10,10 +10,15 @@ implicit_reexport = true
 explicit_package_bases = true
 ; Must specify top-level packages and scripts folders for mypy to work with explicit_package_bases
 mypy_path =
-    $MYPY_CONFIG_FILE_DIR/com,
-    $MYPY_CONFIG_FILE_DIR/win32/Lib,
-    $MYPY_CONFIG_FILE_DIR/Pythonwin,
     $MYPY_CONFIG_FILE_DIR/AutoDuck,
+    $MYPY_CONFIG_FILE_DIR/com,
+    $MYPY_CONFIG_FILE_DIR/Pythonwin,
+    $MYPY_CONFIG_FILE_DIR/Pythonwin/pywin/Demos,
+    $MYPY_CONFIG_FILE_DIR/win32/Demos,
+    $MYPY_CONFIG_FILE_DIR/win32/Demos/security,
+    $MYPY_CONFIG_FILE_DIR/win32/Demos/service,
+    $MYPY_CONFIG_FILE_DIR/win32/Demos/win32wnet,
+    $MYPY_CONFIG_FILE_DIR/win32/Lib,
     $MYPY_CONFIG_FILE_DIR/win32/scripts/VersionStamp,
 
 ; TODO: Gradually type classes and functions until we can turn back check_untyped_defs to true.
@@ -47,14 +52,15 @@ exclude = (?x)(
           )
 
 ; C-modules that will need type-stubs
-[mypy-adsi.*,dde,exchange,exchdapi,mapi,perfmon,servicemanager,win32api,win32console,win32clipboard,win32comext.adsi.adsi,win32event,win32evtlog,win32file,win32gui,win32help,win32pdh,win32process,win32ras,win32security,win32service,win32trace,win32ui,win32uiole,win32wnet,_win32sysloader,_winxptheme]
+[mypy-adsi.*,dde,exchange,exchdapi,mapi,mmapfile,perfmon,servicemanager,timer,win32api,win32console,win32clipboard,win32comext.adsi.adsi,win32cred,win32event,win32evtlog,win32file,win32gui,win32help,win32net,win32pdh,win32pipe,win32print,win32process,win32profile,win32ras,win32security,win32service,win32trace,win32transaction,win32ts,win32ui,win32uiole,win32wnet,_win32sysloader,_winxptheme]
 ignore_missing_imports = True
 
+; pywin32_system32 is an empty module created in setup.py to store dlls
+; OpenGL is untyped
+; Test is a local untyped module in win32comext.axdebug
 ; verstamp is installed from win32verstamp.py called in setup.py
 ; Most of win32com re-exports win32comext
-; Test is a local untyped module in win32comext.axdebug
-; pywin32_system32 is an empty module created in setup.py to store dlls
-[mypy-verstamp,win32com.*,Test,pywin32_system32]
+[mypy-pywin32_system32,OpenGL.*,Test,verstamp,win32com.*]
 ignore_missing_imports = True
 
 ; Distutils being removed from stdlib currently causes some issues on Python 3.12
