@@ -15,6 +15,7 @@ Coming in build 307, as yet unreleased
 --------------------------------------
 
 ### pywin32
+* Fixed import issues in ocx and app pywin Demos (#2291, @Avasam)
 * Fixed accidentally trying to raise a `str` instead of an `Exception` in (#2270, @Avasam)
   * `Pythonwin/pywin/debugger/debugger.py`
   * `Pythonwin/pywin/framework/dlgappcore.py`
